--- a/app/views/about.html
+++ b/app/views/about.html
@@ -45,9 +45,25 @@
      <b> My Ratlam </b> is a Android app that provides Information about Local Business and Services that is require in Daily Needs.It provides Information about all Government,Public and Private Department.
     </p>
 
-   <p>
-     <b> My Ratlam </b> is a Android app that provides Information about Local Business and Services that is require in Daily Needs.It provides Information about all Government,Public and Private Department.
+   
+    <h3> MyRatlam's Mission</h3>
+    <p>
+
+
+        To provide fast, free, reliable and comprehensive information to our users and connect buyers to sellers.
     </p>
+        <h3>Corporate Information</h3>
+    <p>
+        The company started offering local search services in 2016 under the MyRatlam brand and is now the leading local search engine in India.
+        The official website www.MyRatlam.com was launched in 2017.
+        <br />
+    </p>
+    <p>
+        MyRatlam's search service is available to users across multiple platforms, such as the internet, mobile Internet, over the telephone (voice) and text (SMS).
+        MyRatlam's search service bridges the gap between the users and businesses by helping users find relevant providers of products and services quickly, while helping businesses listed in MyRatlam's database to market their offerings.
+    </p>
+        
+ 
 
 </div>
 
