--- a/app/views/darshan.html
+++ b/app/views/darshan.html
@@ -109,10 +109,10 @@
         <div class="row">
 
             <div class="col-xs-12">
-                <a style="position:absolute; right:25px; margin-top:-7px;" tel="{{obj.Contact1}}"> <i style="font-size:45px; color:chocolate" class="fa fa-phone-square" aria-hidden="true"></i></a>
+                <a style="position:absolute; right:25px; margin-top:-7px;" href="tel:+91{{obj.Contact1}}"> <i style="font-size:45px; color:chocolate" class="fa fa-phone-square" aria-hidden="true"></i></a>
 
                 <p> <b> {{obj.OwnerName}} </b> </p>
-                <p>Contact. {{obj.Contact1}} </p>
+                <p>Contact.   {{obj.Contact1}}</p>
                   <p>Address. {{obj.Address1}}</p>
                   <p style="font-size:12px; color:#888;">{{obj.Description}}</p>
             </div>
