--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,116 +1,127 @@
 ﻿<style>
-   
-  
 
-    .container {
-        width: 100%;
-        padding-left: 0px;
-        padding-right: 0px;
+
+
+        .container {
+            width: 100%;
+            padding-left: 0px;
+            padding-right: 0px;
+        }
+
+        h4 {
+            font-size:21px;
+
+        }
+
+        p {
+
+            font-size:15px;
+            margin-bottom:5px;
+        }
+
+        .comments-list .comment-body {
+
+            padding-left:80px;
+        }
+        .comments-list li {
+        margin-bottom: 15px;
     }
 
-    h4 {
-        font-size:21px;
-        
+
+          .comments-list li p {
+        margin-bottom: -1px;
     }
 
-    p {
+        .fa-search {
 
-        font-size:15px;
-        margin-bottom:5px;
+            display:none;
+        }
+
+
+
+        .avatar {
+        width: 70px;
+        height: 70px;
+        border:2px solid #ccc;
+        border-radius:100%;
     }
+        .well {
+            border:transparent;
+            margin-bottom:2px;
+            padding-bottom:0px;
+        }
 
-    .comments-list .comment-body {
+          .dropdown-toggle {
+            display:none;
+        }
 
-        padding-left:80px;
+          .comments-list .author {
+        margin-bottom: 2px;
+        display: inline-block;
+        margin-top: 5px;
     }
-    .comments-list li {
-    margin-bottom: 15px;
-}
-
-
-      .comments-list li p {
-    margin-bottom: -1px;
-}
-
-    .fa-search {
-
-        display:none;
-    }
-  
-
-
-    .avatar {
-    width: 70px;
-    height: 70px;
-    border:2px solid #ccc;
-    border-radius:100%;
-}
-    .well {
-        border:transparent;
-        margin-bottom:2px;
-        padding-bottom:0px;
-    }
-
-      .dropdown-toggle {
-        display:none;
-    }
-
-      .comments-list .author {
-    margin-bottom: 2px;
-    display: inline-block;
-    margin-top: 5px;
-}
 </style>
 
-  <img style="width:100%; max-height:300px;" src="img/rtm.png" alt="" ">
+<img style="width:100%; max-height:300px;" src="img/rtm.png" alt="" ">
 
 <div style="color:#fff; padding-top:10px; padding-bottom:5px;" class="well red">
-    
+
     <p>
-     80 Feet road, Alkapuri </p>
+        80 Feet road, Alkapuri
+    </p>
     <p>
-    Ratlam, MP, India </p>
+        Ratlam, MP, India
+    </p>
     <p>
-    9640993390 , 8890638988  </p>
+        9640993390 , 8890638988
+    </p>
 </div>
 
 <div class="well">
-     
 
-    <ul  class="comments-list">
-              <li class="animated bounceInLeft">
-                <img src="img/anil.jpg" alt="" class="avatar ">
-                <div class="comment-body">
-                  <span class="author uppercase">Anil Bhatt</span>
-                    <p>PGDABM - Managing Leader</p>
-                    <a href="tel:+919640993390" class="Blondie">
-                        9640993390
-                    </a> 
-                </div>
-              </li>
-              <li class="nitesh hide">
-                <img src="img/krishna.jpg" alt="" class="avatar ">
-                <div class="comment-body">
-                  <span class="author uppercase">Krishna Jangid</span>
-                    <p>MCA - APP Developer</p>
-                    <a href="tel:+918559885552" class="Blondie">
-                        9640993390
-                    </a> 
-                </div>
-              </li>
-              <li class="krishna hide">
-                <img src="img/nanu.png" alt="" class="avatar ">
-                <div class="comment-body">
-                  <span class="author uppercase">Narayan Sharma</span>
-                    <p>Msc Nursing</p>
-                    <a href="tel:+917879268534" class="Blondie">
-                        7879268534
-                    </a> 
-                </div>
-              </li>
-            
-            
-            </ul>
+
+    <ul class="comments-list">
+
+
+        <li>
+            <img src="img/nanu.png" alt="" class="avatar ">
+            <div class="comment-body">
+                <span class="author uppercase">Narayan Sharma</span>
+                <p>
+                    <a href="tel:+918965806365" class="Blondie">
+                        8965806365
+                    </a>  Nursing - Managing Leader
+                </p>
+                <a href="tel:+917879268534" class="Blondie">
+                    7879268534
+                </a>
+            </div>
+        </li>
+
+        <li>
+            <img src="img/anil.jpg" alt="" class="avatar ">
+            <div class="comment-body">
+                <span class="author uppercase">Anil Bhatt</span>
+                <p>PGDABM </p>
+                <a href="tel:+919640993390" class="Blondie">
+                    9640993390
+                </a>
+            </div>
+        </li>
+        <li>
+            <img src="img/krishna.jpg" alt="" class="avatar ">
+            <div class="comment-body">
+                <span class="author uppercase">Krishna Jangid</span>
+                <p>MCA - APP Developer</p>
+                <a href="tel:+918559885552" class="Blondie">
+                    8559885552
+                </a>
+            </div>
+        </li>
+
+
+
+    </ul>
 
 
 </div>
