--- a/app/views/login.html
+++ b/app/views/login.html
@@ -362,10 +362,13 @@ background-color: rgba(0,0,0,0.7);
 <div class="categoryhead">
     <div class="row">
 
+         <div style="padding-right:5px; text-align:left; padding-left:4px; margin-top:5px;" class="col-xs-4">
+            <a onclick="window.open('https://www.facebook.com/My-Ratlam-793291270824125');">  <img src="img/facebook.png" alt="Alternate Text" /></a>
+              <a onclick="window.open('https://twitter.com/my_ratlam');">  <img style="height:28px; margin-top:1px; margin-left:5px;" src="img/twitter.png" alt="Alternate Text" /></a>
+      </div>
 
-
-      <div style="padding-right:5px;" class="col-xs-8">
-          <h5>Looks for one of below !!</h5>
+      <div style="padding-right:5px; padding-left:5px;" class="col-xs-4">
+          <h5>Looks for </h5>
       </div>
       <div style="padding-right:7px;" class="col-xs-4">
           <div class="pull-right">
