--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -88,12 +88,10 @@
             <div class="comment-body">
                 <span class="author uppercase">Narayan Sharma</span>
                 <p>
-                    <a href="tel:+918965806365" class="Blondie">
-                        8965806365
-                    </a>  Nursing - Managing Leader
+                   Nursing - Managing Leader
                 </p>
-                <a href="tel:+917879268534" class="Blondie">
-                    7879268534
+                <a href="tel:+8965806365" class="Blondie">
+                    8965806365
                 </a>
             </div>
         </li>
