--- a/app/views/detail.html
+++ b/app/views/detail.html
@@ -350,7 +350,7 @@
     <div class="row">
         <div class="center col-md-12">
             <h4>   {{Currentshop.Name}}</h4>
-               <h4>   {{Currentshop.Contact1}}</h4>
+               <h4>  <a href="tel:+91{{Currentshop.Contact1}}"> {{Currentshop.Contact1}} </a> </h4>
                <h5>   {{Currentshop.Address1}}</h5>
         
 
@@ -396,7 +396,7 @@
                   <tr>
                     <td><i class="fa fa-phone" ></i> Official Contact </td>
 
-                     <td>  {{Currentshop.Contact2}}</td>
+                     <td>  <a href="tel:+91{{Currentshop.Contact2}}">{{Currentshop.Contact2}}</a> </td>
 
                   
                 </tr>
@@ -404,7 +404,7 @@
                   <tr>
                     <td><i class="fa fa-phone" ></i> Personal Contact </td>
 
-                     <td>  {{Currentshop.Contact1}}</td>
+                      <td>  <a href="tel:+91{{Currentshop.Contact1}}">{{Currentshop.Contact1}}</a> </td>
 
                   
                 </tr>
