--- a/app/views/login.html
+++ b/app/views/login.html
@@ -359,12 +359,15 @@ background-color: rgba(0,0,0,0.7);
      </div>
 </div>
 
+
+
 <div class="categoryhead">
     <div class="row">
 
          <div style="padding-right:5px; text-align:left; padding-left:4px; margin-top:5px;" class="col-xs-4">
-            <a onclick="window.open('https://www.facebook.com/My-Ratlam-793291270824125');">  <img src="img/facebook.png" alt="Alternate Text" /></a>
-              <a onclick="window.open('https://twitter.com/my_ratlam');">  <img style="height:28px; margin-top:1px; margin-left:5px;" src="img/twitter.png" alt="Alternate Text" /></a>
+            <a onclick="window.open('https://www.facebook.com/My-Ratlam-793291270824125');">  <img style="height:30px; margin-top:2px;" src="img/facebook.png" alt="Alternate Text" /></a>
+              <a onclick="window.open('https://twitter.com/my_ratlam');">  <img style="height:26px; margin-top:2px; margin-left:-1px;" src="img/twitter.png" alt="Alternate Text" /></a>
+              <a onclick="window.open('http://www.myratlam.com/');">  <img style="height:26px; margin-top:2px; margin-left:-1px;" src="img/www.png" alt="Alternate Text" /></a>
       </div>
 
       <div style="padding-right:5px; padding-left:5px;" class="col-xs-4">
@@ -379,6 +382,7 @@ background-color: rgba(0,0,0,0.7);
       </div>
         </div>
 </div>
+
 
 
 <!--<button onclick="window.plugins.socialsharing.share('Message only')">message only</button>
