--- a/app/views/login.html
+++ b/app/views/login.html
@@ -434,7 +434,7 @@ background-color: rgba(0,0,0,0.7);
 </div>
 
 
-<a class="pink sharebtn" onclick="window.plugins.socialsharing.share('My Ratlam', null, null, 'https://play.google.com/store/apps/details?id=com.ratlam&hl=en')">
+<a class="pink sharebtn" onclick="window.plugins.socialsharing.share('My Ratlam', null, null, 'https://play.google.com/store/apps/details?id=com.myratlam&hl=en')">
     <i class="fa fa-share-alt"></i>
 </a>
 
