--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -78,17 +78,13 @@
 </div>
 
 <div class="well">
-
-
     <ul class="comments-list">
-
-
         <li>
             <img src="img/nanu.png" alt="" class="avatar ">
             <div class="comment-body">
                 <span class="author uppercase">Narayan Sharma</span>
                 <p>
-                   Nursing - Managing Leader
+                  M.Sc Nursing - Managing Leader
                 </p>
                 <a href="tel:+8965806365" class="Blondie">
                     8965806365
@@ -110,7 +106,7 @@
             <img src="img/krishna.jpg" alt="" class="avatar ">
             <div class="comment-body">
                 <span class="author uppercase">Krishna Jangid</span>
-                <p>MCA - APP Developer</p>
+                <p>MCA - CEO & Developer</p>
                 <a href="tel:+918559885552" class="Blondie">
                     8559885552
                 </a>
