--- a/app/views/login.html
+++ b/app/views/login.html
@@ -298,13 +298,13 @@ background-color: rgba(0,0,0,0.7);
 
 <div class="swiper-container">
 <div class="swiper-wrapper">
-     <div  style="background:#fff;" class="swiper-slide "> 
+     <!--<div  style="background:#fff;" class="swiper-slide "> 
       <img style="width:100%; height:inherit"  src="img/36.jpg" alt="Alternate Text" />
 </div>
 
      <div  style="background:#fff;" class="swiper-slide "> 
       <img style="width:100%; height:inherit"  src="img/37.jpg" alt="Alternate Text" />
-</div>
+</div>-->
 
 
 <!--    <div ng-if="dynamicimage==false" style="background:#fff;" class="swiper-slide "> 
