--- a/app/views/around.html
+++ b/app/views/around.html
@@ -1,7 +1,4 @@
 ﻿<style>
-   
-  
-
     .container {
         width: 100%;
         padding-left: 0px;
@@ -9,320 +6,346 @@
     }
 
     h4 {
-        font-size:21px;
-        margin-top:0px;
+        font-size: 21px;
+        margin-top: 0px;
     }
 
     p {
-
-        font-size:15px;
-        margin-bottom:5px;
+        font-size: 15px;
+        margin-bottom: 5px;
     }
 
     .comments-list .comment-body {
-
-        padding-left:51px;
+        padding-left: 51px;
     }
+
     .comments-list li {
-    margin-bottom: 25px;
-}
-  .fa-search {
-
-        display:none;
+        margin-bottom: 25px;
     }
+
+    .fa-search {
+        display: none;
+    }
+
     .dropdown-toggle {
-        display:none;
+        display: none;
     }
 
     .well {
-
-        padding-bottom:0px;
-        margin-bottom:0px;
-      
+        padding-bottom: 0px;
+        margin-bottom: 0px;
     }
 
 
         .well .btn {
-            padding-left:17px;
-            padding-right:17px;
-            margin:0 auto;
-            text-align:center;
-            width:100%;
+            padding-left: 17px;
+            padding-right: 17px;
+            margin: 0 auto;
+            text-align: center;
+            width: 100%;
         }
 
     .table {
-        margin-bottom:5px;
+        margin-bottom: 5px;
     }
 
     table .btn {
-
-        padding-left:7px;
-        padding-right:7px;
-        width:100%;
-        text-align:center;
-        border-radius:0px;
-        text-transform:capitalize;
-        height:50px;
-        line-height:50px;
+        padding-left: 7px;
+        padding-right: 7px;
+        width: 100%;
+        text-align: center;
+        border-radius: 0px;
+        text-transform: capitalize;
+        height: 50px;
+        line-height: 50px;
     }
 </style>
-  <img style="width:100%;" src="img/ratlam.jpg" alt="Alternate Text" />
+<img style="width: 100%; background-color:brown; margin-top:5px;" src="img/help.png" alt="Alternate Text" />
 <div class="well">
- 
-    <h4>Around Ratlam</h4>
- 
-    <table class="table">
-        <thead><tr>
-            <th>Place</th>
 
-             <th>Distance</th>
-        </tr>
-            </thead>
+
+
+    <table class="table table-bordered">
+
         <tbody>
             <tr>
-                <td>
-                    Shrinath ji temple
-                </td>  
-                <td>0.3 KM</td>  
-            </tr>
-
-             <tr>
-                <td>
-                   Ganesh Tekri
-                </td>  
-                <td>2.5 KM</td>  
-            </tr>
-
-             <tr>
-                <td>
-                    Lal Bagh
-                </td>  
-                <td>0.5 KM</td>  
-            </tr>
-
-             <tr>
-                <td>
-                   Giraj Parikrama
-                </td>  
-                <td>0.4 KM</td>  
-            </tr>
-
-              <tr>
-                <td>
-                 Vallabh Ashram
-                </td>  
-                <td>1.5 KM</td>  
-            </tr>
-
-             <tr>
-                <td>
-               Shrinath ji Goushala
-                </td>  
-                <td>2.5 KM</td>  
-            </tr>
-
-             <tr>
-                <td>
-            Girdhar sagar
-                </td>  
-                <td>0.8 KM</td>  
+                <td>Police
+                </td>
+                <td>100</td>
             </tr>
 
             <tr>
-                <td>
+                <td>CM Helpline
+                </td>
+                <td>181</td>
+            </tr>
 
-                 
+            <tr>
+                <td>Emergency
+                </td>
+                <td>108</td>
+            </tr>
+
+            <tr>
+                <td>Nirbhaya helpline
+                </td>
+                <td>1090</td>
+            </tr>
+
+            <tr>
+                <td>Lokayukt ujjain
+                </td>
+                <td>0734-2518882</td>
+            </tr>
+
+            <tr>
+                <td>Adhar card
+                </td>
+                <td>1947</td>
+            </tr>
+
+            <tr>
+                <td>Nagrik suvidha kendra
+                </td>
+                <td>155343</td>
+            </tr>
+
+            <tr>
+                <td>Vidhut samasya
 
 
                 </td>
 
 
-                  <td>
-
+                <td>18002331912
                    
 
                 </td>
-                </tr>
-
-        </tbody>
-    </table>
- 
-
-</div>
-
-
-<div class="well">
- 
-    <h4>Visit Places</h4>
- 
-    <table class="table">
-        <thead><tr>
-            <th>Place</th>
-
-             <th>Distance</th>
-        </tr>
-            </thead>
-        <tbody>
-            <tr>
-                <td>
-                  Udaipur
-                </td>  
-                <td>48 KM</td>  
-            </tr>
-
-             <tr>
-                <td>
-                 Ekling Ji
-                </td>  
-                <td>27 KM</td>  
-            </tr>
-
-             <tr>
-                <td>
-                   Sas bahu mandir (Nagda)
-                </td>  
-                <td>32 KM</td>  
-            </tr>
-
-             <tr>
-                <td>
-                  Haldighati
-                </td>  
-                <td>20 KM</td>  
-            </tr>
-
-              <tr>
-                <td>
-               Ghasiyar
-                </td>  
-                <td>50 KM</td>  
-            </tr>
-
-             <tr>
-                <td>
-            Kankroli
-                </td>  
-                <td>18 KM</td>  
-            </tr>
-
-             <tr>
-                <td>
-           Charbhuja
-                </td>  
-                <td>70 KM</td>  
-            </tr>
-
-            
-             <tr>
-                <td>
-           Kumbhalgarh
-                </td>  
-                <td>78 KM</td>  
-            </tr>
-
-            
-             <tr>
-                <td>
-        Parsuram mahadev
-                </td>  
-                <td>95 KM</td>  
-            </tr>
-
-            
-             <tr>
-                <td>
-           Ranakpur
-                </td>  
-                <td>110 KM</td>  
-            </tr>
-
-            
-             <tr>
-                <td>
-           Mount Abu
-                </td>  
-                <td>200 KM</td>  
-            </tr>
-
-            
-             <tr>
-                <td>
-           Ambaji
-                </td>  
-                <td>200 KM</td>  
-            </tr>
-
-            
-             <tr>
-                <td>
-           Shani maharaj
-                </td>  
-                <td>100 KM</td>  
-            </tr>
-
-            
-             <tr>
-                <td>
-           Sanvaliya Ji
-                </td>  
-                <td>110 KM</td>  
-            </tr>
-
-             <tr>
-                <td>
-        Avari mataji
-                </td>  
-                <td>120 KM</td>  
-            </tr>
-
-             <tr>
-                <td>
-         Chittorgarh
-                </td>  
-                <td>110 KM</td>  
-            </tr>
-
-             <tr>
-                <td>
-         Ajmer
-                </td>  
-                <td>235 KM</td>  
-            </tr>
-
-
-               <tr>
-                <td>
-         Pushkar
-                </td>  
-                <td>260 KM</td>  
             </tr>
 
             <tr>
-                <td colspan="2">
-
-                  
+                <td>MP paryatan
 
 
                 </td>
 
 
-                  
-                </tr>
+                <td>18002337777
+                   
+
+                </td>
+            </tr>
+
+
+            <tr>
+                <td>Jago grahak jago
+
+
+                </td>
+
+
+                <td>1800111503
+                   
+
+                </td>
+            </tr>
+
+
+            <tr>
+                <td>Divyang toll free
+
+
+                </td>
+
+
+                <td>1800222014
+                   
+
+                </td>
+            </tr>
+
+            <tr>
+                <td>Railway suraksha
+
+
+                </td>
+
+
+                <td>122
+                   
+
+                </td>
+            </tr>
+
+            <tr>
+                <td>Railway Enquiry
+
+
+                </td>
+
+
+                <td>139
+                   
+
+                </td>
+            </tr>
+
+            <tr>
+                <td>Child line
+
+
+                </td>
+
+
+                <td>1098
+                   
+
+                </td>
+            </tr>
+
+
+            <tr>
+                <td>Kisan call center
+
+                </td>
+
+
+                <td>1551
+                   
+
+                </td>
+            </tr>
+
+
+            <tr>
+                <td>Aapada prabandhan
+
+                </td>
+
+
+                <td>1059
+                   
+
+                </td>
+            </tr>
+
+            <tr>
+                <td>Shiksha vibhag
+
+                </td>
+
+
+                <td>155343
+                   
+
+                </td>
+            </tr>
+
+
+            <tr>
+                <td>Fire bigrade
+
+                </td>
+
+
+                <td>101
+                   
+
+                </td>
+            </tr>
+
+
+            <tr>
+                <td>Anti corruption 
+
+                </td>
+
+
+                <td>1800222021
+                   
+
+                </td>
+            </tr>
+
+
+            <tr>
+                <td>Nasha mukti
+
+                </td>
+
+
+                <td>1800459459
+                   
+
+                </td>
+            </tr>
+
+            <tr>
+                <td>Nasha mukti
+
+                </td>
+
+
+                <td>1800459459
+                   
+
+                </td>
+            </tr>
+
+
+            <tr>
+                <td>Yuva paramarsh
+
+                </td>
+
+
+                <td>180116888
+                   
+
+                </td>
+            </tr>
+
+            <tr>
+                <td>Anti ragging
+
+                </td>
+
+
+                <td>18001805522
+                   
+
+                </td>
+            </tr>
+
+
+            <tr>
+                <td>Aids
+
+                </td>
+
+
+                <td>1097
+                   
+
+                </td>
+            </tr>
 
         </tbody>
     </table>
- 
+
 
 </div>
 
 
+<br />
 
 
 
 
-  
 
 
 
- 
-                       
+
+
+
+
