--- a/app/views/train.html
+++ b/app/views/train.html
@@ -119,7 +119,7 @@
 
     <!--<input style="border-radius:0px;" type="text" data-ng-model="Search" class="form-control" placeholder="Type to search" name="name" value=" " />-->
     <br/>
-    <div class="row">
+    <div style="display:none;"  class="row">
         <div class="col-md-12">
             <div class="col-md-6">
                 <div class="form-group">
@@ -142,6 +142,12 @@
         </div>
 
     </div>
+
+      <div  class="row">
+        <div class="col-md-12">
+        <input type="text" class="form-control" data-ng-model="Search" name="name" placeholder="Type to search" value=" " />
+    </div> </div>
+
     <div class="traindata" data-ng-repeat="obj in TrainTimings | filter : Search">
         <h4>{{obj.Name}}</h4>
         <div class="row">
