--- a/app/views/train.html
+++ b/app/views/train.html
@@ -119,7 +119,7 @@
 
     <!--<input style="border-radius:0px;" type="text" data-ng-model="Search" class="form-control" placeholder="Type to search" name="name" value=" " />-->
     <br/>
-    <div style="display:none;"  class="row">
+    <div   class="row">
         <div class="col-md-12">
             <div class="col-md-6">
                 <div class="form-group">
@@ -132,21 +132,20 @@
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <label> To</label>
+                 <!--   <label> To</label>
                     <select data-ng-model="Search" class="form-control">
                         <option value="">Select to</option>
                         <option value="{{obj.To}}" data-ng-repeat="obj in TrainTimings | unique: 'To'">{{obj.To}}</option>
-                    </select>
+                    </select>-->
+
+                      <input type="text" class="form-control" data-ng-model="Search" name="name" placeholder="Type to search" value=" " />
                 </div>
             </div>
         </div>
 
     </div>
 
-      <div  class="row">
-        <div class="col-md-12">
-        <input type="text" class="form-control" data-ng-model="Search" name="name" placeholder="Type to search" value=" " />
-    </div> </div>
+   
 
     <div class="traindata" data-ng-repeat="obj in TrainTimings | filter : Search">
         <h4>{{obj.Name}}</h4>
